--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,1 @@
-MONGO_URI="mongodb://localhost:27017/test"
-
-//?readPreference=primary&appname=MongoDB%20Compass&ssl=false
+MONGO_URI="mongodb+srv://abdelhak-touil:abd7188759@cluster0.r5s1r.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
